--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -5,18 +5,4 @@
     </li>
 </ul>
 
-
-
-<div class="hero-details" *ngIf="selectedHero">
-    <h2>
-        {{selectedHero.name | uppercase}} Details
-    </h2>
-
-    <h3>Name: {{selectedHero.name}}</h3>
-
-    <div>
-        <label> Name: 
-    <input [(ngModel)]="selectedHero.name" placeholder="name">
-  </label>
-    </div>
-</div>
+<app-hero-detail [hero]="selectedHero"></app-hero-detail>
