add component do messages, change data struture to use services

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
     <h1 class="hero-title">{{ title }}</h1>
     <div class="main-container">
         <app-heroes></app-heroes>
+        <app-messages></app-messages>
     </div>
 </div>
