--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
     <h1 class="hero-title">{{ title }}</h1>
     <div class="main-container">
         <nav>
+            <a routerLink="/dashboard">Dashboard</a>
             <a routerLink="/heroes">Heroes</a>
         </nav>
         <router-outlet></router-outlet>
