--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
         Top Heroes
     </h3>
     <div class="main-container">
-        <a *ngFor="let hero of heroes">
+        <a *ngFor="let hero of heroes" routerLink="/detail/{{hero.id}}">
             <div class="module hero">
                 <h4>
                     {{hero.name}}
