--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,5 +1,5 @@
 <div class="hero-details" *ngIf="hero">
-    <h2>
+    <h2 class="title-default">
         {{hero.name | uppercase}} Details
     </h2>
 
