--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,12 +3,8 @@
         Top Heroes
     </h3>
     <div class="main-container">
-        <a *ngFor="let hero of heroes" routerLink="/detail/{{hero.id}}">
-            <div class="module hero">
-                <h4>
-                    {{hero.name}}
-                </h4>
-            </div>
+        <a *ngFor="let hero of heroes" routerLink="/detail/{{hero.id}}" class="hero" >
+            {{hero.name}}
         </a>
     </div>
 </div>
